libs/extractor/src/snapshots/extractor__tests__stylex_define_vars_and_create_theme.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract_tsx(r\"import stylex from '@stylexjs/stylex';\nconst colors = stylex.defineVars({ primary: 'blue', secondary: 'grey' });\nconst dark = stylex.createTheme(colors, { primary: 'navy' });\nconst styles = stylex.create({ box: { color: colors.primary, backgroundColor: colors.secondary } });\nconst el = <div {...stylex.props(dark, styles.box)} />;\"))"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background-color",
                value: "var(--Ksxv_dtest_ptsx_dsecondary)",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "var(--Ksxv_dtest_ptsx_dprimary)",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Css(
            ExtractCss {
                css: ".Ksxt_dtest_ptsx_dcolors{--Ksxv_dtest_ptsx_dprimary:navy;}",
                file: "test.tsx",
            },
        ),
        Css(
            ExtractCss {
                css: ":root{--Ksxv_dtest_ptsx_dprimary:blue;--Ksxv_dtest_ptsx_dsecondary:grey;}",
                file: "test.tsx",
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport stylex from \"@stylexjs/stylex\";\nconst colors = {\n\t\"primary\": \"var(--Ksxv_dtest_ptsx_dprimary)\",\n\t\"secondary\": \"var(--Ksxv_dtest_ptsx_dsecondary)\"\n};\nconst dark = \"Ksxt_dtest_ptsx_dcolors\";\nconst styles = { \"box\": \"OHc183uys15eyp101m OHdqw18zy8qw_cd09w\" };\nconst el = <div {...{ className: \"Ksxt_dtest_ptsx_dcolors OHc183uys15eyp101m OHdqw18zy8qw_cd09w\" }} />;\n",
}
