libs/extractor/src/snapshots/extractor__tests__stylex_dynamic_basic.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst styles = stylex.create({\n  bar: (height) => ({\n    height,\n  }),\n});\nconst result = stylex.props(styles.bar(h));\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "height",
                level: 0,
                identifier: "height",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport stylex from \"@stylexjs/stylex\";\nconst styles = { \"bar\": \"OHad7h2c87u9pbck1f\" };\nconst result = {\n\tclassName: \"OHad7h2c87u9pbck1f\",\n\tstyle: { \"---SUHbf3scxwjeo0vwyni-b6\": ((v) => typeof v === \"number\" ? v + \"px\" : v)(h) }\n};\n",
}
