libs/extractor/src/snapshots/extractor__tests__stylex_dynamic_body_spread_and_computed.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import stylex from '@stylexjs/stylex';\nconst other = { fontSize: '14px' };\nconst styles = stylex.create({ base: (x) => ({ ...other, [Symbol()]: x, color: 'red' }) });\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport stylex from \"@stylexjs/stylex\";\nconst other = { fontSize: \"14px\" };\nconst styles = { \"base\": \"a\" };\n",
}
